--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ version = "0.1.0"
 
 [dependencies]
 ruma-api = { git = "https://github.com/exul/ruma-api" }
-ruma-events = { git = "http://github.com/exul/ruma-events" }
-ruma-identifiers = { git = "https://github.com/ruma/ruma-identifiers.git", features = ["diesel"] }
+ruma-events = { version = "0.11" }
+ruma-identifiers = { version = "0.11", features = ["diesel"] }
 ruma-signatures = "0.4"
 serde = "1.0"
 serde_derive = "1.0"
